tests/samples/positive/types/const_enum.ax
module const_enum;

const answer: i32 = 42;

enum Mode: u8 {
    fast = 1,
    slow = 2,
}

fn main() -> i32 {
    return answer;
}
