tests/samples/negative/types/enum_payload_invalid_storage.ax
module enum_payload_invalid_storage;

opaque struct Handle;

enum Bad: u8 {
    handle(Handle) = 1,
}

fn main() -> i32 {
    return 0;
}
